# ChangeLog for app-backup/rdup
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  14 Aug 2009; Tom Hendrikx (whyscream) <tom@whyscream.net>
  -rdup-1.0.0.ebuild, +rdup-1.0.2.ebuild, metadata.xml:
  version bump

  02 Jun 2009; Tom Hendrikx (whyscream) <tom@whyscream.net>
  -rdup-0.9.9.ebuild, +rdup-1.0.0.ebuild:
  version bump to 1.0.0, first stable release!

  06 May 2009; Tom Hendrikx (whyscream) <tom@whyscream.net>
  -rdup-0.9.1.ebuild, +rdup-0.9.9.ebuild:
  version bump, adding dependency on dev-util/dejagnu for FEATURES=test

  26 Apr 2009; Tom Hendrikx (whyscream) <tom@whyscream.net>
  -rdup-0.9.0.ebuild, +rdup-0.9.1.ebuild:
  version bump

  04 Mar 2009; Tom Hendrikx (whyscream) <tom@whyscream.net>
  -rdup-0.7.1.ebuild, +rdup-0.9.0.ebuild,
  +files/rdup-0.9.0-configure-ac.patch, metadata.xml:
  version bump

  16 Feb 2009; Tom Hendrikx (whyscream) <tom@whyscream.net>
  -rdup-0.7.0.ebuild, +rdup-0.7.1.ebuild:
  version bump

  31 Jan 2009; Tom Hendrikx (whyscream) <tom@whyscream.net>
  -rdup-0.6.6.ebuild, +rdup-0.7.0.ebuild:
  versiom bump

  14 Jan 2009; Tom Hendrikx (whyscream) <tom@whyscream.net>
  +rdup-0.6.6.ebuild, +metadata.xml:
  New ebuild for rdup, see bug #196309
