@@ -1,5 +1,5 @@
 AUX rdup-0.9.0-configure-ac.patch 1024 RMD160 9736a9075283c065a7f8a74c2921a92b4482d1c9 SHA1 059b2acd80e27efbf5ac27388245b5ea5ee0d165 SHA256 8497a87db36e1b7069b848c9d7c2cef15f525623c36be673e92939771fa89244
 DIST rdup-1.0.2.tar.bz2 1205906 RMD160 a181eed2401d64ecfa30c1e1b06faceec85577fd SHA1 14c5b0d28bfc5f4677122b92fc1cbe257d79b9e2 SHA256 9ec0813f005d7fdaac634575b110bafd193cda81170806e59200e629c107189d
-EBUILD rdup-1.0.2.ebuild 792 RMD160 13b0e997f6284ec27203250b7601cbc4cb67ccef SHA1 633f137d7aa0d149457b75d8153427ca0ee8ad89 SHA256 9715c5f6a0270cd51b7808dedd87fddb1f6dc3f29eb47dc67767c0267c913075
-MISC ChangeLog 1236 RMD160 e613fcdd20943355985677c9053ce0f73bc3b3d7 SHA1 84b82482a277f0c72815a8192bece320f1f8133c SHA256 290f6bdb514a935802404ab47f0fe76bd58732c7ddd1708b312985ed1083bb98
+EBUILD rdup-1.0.2.ebuild 795 RMD160 54ff6551ae9d1d7f4de55156b6fdae60497dca23 SHA1 c6b5fa4ddedf7f7756c309990060a71fc79810b7 SHA256 ac11a8238710ee821abf45063784ca8eed9f1e3998fea085861a46ce8f00dfef
+MISC ChangeLog 1355 RMD160 544beb36f6ddf6bd3d4d174d312d050f550b17e0 SHA1 606b9d1376865eeee65569e164698b343656b9e3 SHA256 660a08ed8aa63a518d8947e57bdec6244293c57771aed12a146f88840efa87b8
 MISC metadata.xml 171 RMD160 ed284df01c230fc7990a6b5888b39166d23f29ba SHA1 f3d64a69044b710e23fb874b3ee4cd338858c8b4 SHA256 a7b30fbacd0e4c312c07a3efac112a3794c81d134442d8104325734d03425adf
