@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  18 Aug 2009; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
+  rdup-1.0.2.ebuild:
+  Move test dependency to DEPEND only
+
   14 Aug 2009; Tom Hendrikx (whyscream) <tom@whyscream.net>
   -rdup-1.0.0.ebuild, +rdup-1.0.2.ebuild, metadata.xml:
   version bump
